TFP-6555 Fikser bug med endringssøknader der bruker endrer sin egen u… (#7759)
TFP-6555 Fikser bug med endringssøknader der bruker endrer sin egen uttaksperiode til å bli annen parts uttaksperiode. Fjerner nå søkers uttak i denne perioden, istf å ignorere oppholdsperioden slik som tidligere